--- a/myblog_02/templates/account/change_password.html
+++ b/myblog_02/templates/account/change_password.html
@@ -1,34 +1,34 @@
 {% extends "base.html"%}
 
-{% block title %}Change Password{% endblock %}
+{% block title %}更改密码{% endblock %}
 
 {% block content %}
     <div class="row text-center vertical-middle-sm">
-        <h1>Change Password</h1>
-        <p>Please entry your old password, for security's sack,and then entry your new password twice so we can verify you typed it in correctly</p>
-        {% if form.new_password1.help_text%}
-            <div class="text-left" style="margin-left: 400px">
-                <p>{{form.new_password1.help_text|safe}}</p>
-            </div>
-        {% endif %}
+        <h1>更改密码</h1>
+        <p>请输入你的旧密码和新密码</p>
+        <!--{% if form.new_password1.help_text%}-->
+            <!--<div class="text-left" style="margin-left: 400px">-->
+                <!--<p>{{form.new_password1.help_text|safe}}</p>-->
+            <!--</div>-->
+        <!--{% endif %}-->
         <form class="form-horizontal" action="." method="post">
             {% csrf_token%}
             <div class="form-group">
                 <label class="col-md-5 control-label text-right">
-                    {{form.old_password.label_tag}}
+                    旧密码
                 </label>
                 <div class="col-md-6 text-left">{{form.old_password}}</div>
             </div>
 
             <div class="form-group">
                 <label class="col-md-5 control-label text-right">
-                    {{form.new_password1.label_tag}}
+                    新密码
                 </label>
                 <div class="col-md-6 text-left">{{form.new_password1}}</div>
             </div>
             <div class="form-group">
                 <label class="col-md-5 control-label text-right">
-                    {{form.new_password2.label_tag}}
+                    确认新密码
                 </label>
                 <div class="col-md-6 text-left">{{form.new_password2}}</div>
             </div>
