--- a/myblog_02/templates/account/password_changed.html
+++ b/myblog_02/templates/account/password_changed.html
@@ -1,9 +1,9 @@
 {% extends "base.html"%}
 
-{% block title%}Password Change Done {% endblock %}
+{% block title%}密码修改成功{% endblock %}
 
 {% block content%}
     <div class="row text-center vertical-middle-sm">
-        <p>Your password was changed.</p>
+        <p>您的密码修改成功！</p>
     </div>
 {% endblock %}
