--- a/myblog_02/templates/account/password_reset_form.html
+++ b/myblog_02/templates/account/password_reset_form.html
@@ -1,14 +1,14 @@
 {% extends "base.html"%}
-{% block title%}Password Reset{%endblock%}
+{% block title%}找回密码{%endblock%}
 {% block content%}
     <div class="row text-center vertical-middle-sm">
-        <h1>Forgotten your password? Reset,please.</h1>
-        <p>Enter your email to set a new password</p>
+        <h1>忘记密码？请重置！</h1>
+        <p>输入你的绑定邮箱来重置密码</p>
         <form class="form-horizontal" action="." method="post">
             {% csrf_token%}
             <div class="form-group">
                 <label class="col-md-5 control-label text-right">
-                    Email
+                    邮箱
                 </label>
                 <div class="col-md-6 text-left">{{form.email}}</div>
             </div>
