--- a/myblog_02/templates/paginator.html
+++ b/myblog_02/templates/paginator.html
@@ -3,7 +3,7 @@
         {% if page.has_previous %}
             <a href="?page={{page.previous_page_number}}">上一页</a>
         {% endif%}
-        <span class="current">Page{{page.number}}of{{page.paginator.num_pages}}</span>
+        <span class="current">第{{page.number}}/{{page.paginator.num_pages}}页</span>
         {% if page.has_next%}
             <a href="?page={{page.next_page_number}}">下一页</a>
         {% endif%}
