--- a/myblog_02/templates/article/list/article_content.html
+++ b/myblog_02/templates/article/list/article_content.html
@@ -1,16 +1,110 @@
 {% extends "base.html"%}
 {% load staticfiles %}
+{% load article_tags%}
 {% block title%}{{article.title}}{%endblock%}
-
 {% block content%}
-    <div>
-        <header>
-            <h1>{{article.title}}</h1>
-            <p>{{article.auth.username}}</p>
-        </header>
-        <link rel="stylesheet" href="{% static 'editormd/css/editormd.preview.css'%}"/>
-        <div id="editormd-view">
-            <textarea id="append-test" style="display: none">{{article.body}}</textarea>
+
+{% with total_likes=article.users_like.count users_like=article.users_like.all%}
+    <div class="container">
+        <div class="col-md-9">
+            <header>
+                <h1>{{article.title}}</h1>
+                <p>
+                    <a href="{% url 'article:author_articles' article.auth.username%}">{{article.auth.username}}</a>
+                    <span style="margin-left: 20px" class="glyphicon glyphicon-thumbs-up">{{total_likes}}like{{total_likes|pluralize}}</span>
+                    <span style="margin-left: 20px">{{views}}view{{views|pluralize}}</span>
+                </p>
+                <p>
+                    <span style="margin-right: 10px"><strong>Tags:</strong></span>
+                    {%for tag in article.article_tag.all%}
+                    {{tag.tag}}&nbsp&nbsp
+                    {% endfor%}
+                </p>
+            </header>
+            <link rel="stylesheet" href="{% static 'editormd/css/editormd.preview.css'%}"/>
+            <div id="editormd-view">
+                {{article.body|markdown}}
+                <!--<textarea id="append-test" style="display: none">{{article.body}}</textarea>-->
+            </div>
+            <div>
+                <p class="text-center">
+                    <a href="javascript:" onclick="like_article({{article.id}},'like')"><span class="glyphicon glyphicon-thumbs-up">like</span></a>
+                    <a href="javascript:" onclick="like_article({{article.id}},'unlike')"><span class="glyphicon glyphicon-thumbs-down">unlike</span></a>
+                </p>
+            </div>
+            <div>
+                <p class="text-center"><strong>点赞本文的读者</strong></p>
+                {% for user in users_like%}
+                <p class="text-center">{{user.username}}</p>
+                {% empty%}
+                <p class="text-center">还没有人点赞！</p>
+                {% endfor%}
+            </div>
+            <hr>
+            <div>
+                <h3>
+                    <span class="glyphicon glyphicon-bullhorn">本文有{{article.comments.count}}条评论</span>
+                </h3>
+                {% for comment in article.comments.all%}
+                    <div>
+                        <p><strong>{{comment.commentator.username}}</strong>说：</p>
+                        <p style="margin-left: 40px">{{comment.body}}</p>
+                    </div>
+                    {% empty%}
+                    <p>没有评论</p>
+                {% endfor%}
+                <h3><span class="glyphicon glyphicon-send">看文章，发评论，不要沉默</span></h3>
+                <form method="POST" action="." class="form-horizontal" role="form">
+                    {% csrf_token%}
+                    <div class="form-group">
+                        <label for="inputEmail3" class="col-sm-2 control-label">评论员</label>
+                        <div class="col-sm-10" style="margin-top: 5px">{{user.username}}</div>
+                    </div>
+                    <div class="form-group">
+                        <label for="inputEmail3" class="col-sm-2 control-label">评论</label>
+                        <div id="id_body" class="col-sm-10">{{comment_form.body}}</div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-sm-offset-2 col-sm-10">
+                            <input type="submit" name="" value="发评论" class="btn btn-primary btn-md">
+
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <h3 class="text-center">最受欢迎的文章</h3>
+            <ol>
+                {% for article_rank in most_viewed%}
+                <li>
+                    <a href="{{article_rank.get_url_path}}">{{article_rank.title}}</a>
+                </li>
+                {% endfor %}
+            </ol>
+            <hr>
+            <h3 class="text-center">最新文章</h3>
+            {% latest_articles 5%}
+            <hr>
+            <h3 class="text-center">评论最多文章</h3>
+            {% most_commented_articles as most_comments%}
+            <ul>
+                {% for comment_article in most_comments%}
+                    <li>
+                        <a href="{{comment_article.get_url_path}}">{{comment_article.title}}</a>
+                    </li>
+                {%endfor%}
+            </ul>
+            <hr>
+            <h3 class="text-center">推荐相似文章</h3>
+            {% similar_articles article as similars%}
+            <ul>
+                {% for similar_article in similars%}
+                    <li>
+                        <a href="{{similar_article.get_url_path}}">{{similar_article.title}}</a>
+                    </li>
+                {%endfor%}
+            </ul>
         </div>
     </div>
 <script src="{% static 'js/jquery.js'%}"></script>
@@ -22,6 +116,7 @@
 <script src="{% static 'editormd/lib/flowchart.min.js'%}"></script>
 <script src="{% static 'editormd/lib/jquery.flowchart.min.js'%}"></script>
 <script src="{% static 'editormd/editormd.js'%}"></script>
+<script src="{% static 'js/layer.js'%}"></script>
 <script type="text/javascript">
     $(function () {
         editormd.markdownToHTML("editormd-view",{
@@ -33,5 +128,23 @@
             sequenceDiagram : true,
         });
     });
+    function like_article(id,action) {
+        $.ajax({
+            url : "{% url 'article:like_article'%}",
+            type : "POST",
+            data : {'id':id,action : action},
+            success: function (e) {
+                if (e == "1"){
+                    layer.msg("感想点赞");
+                }
+                else{
+                    layer.msg("我会继续努力的");
+
+                }
+                window.location.reload();
+            }
+        })
+    }
 </script>
+{% endwith %}
 {% endblock %}
