--- a/myblog_02/templates/blog/content.html
+++ b/myblog_02/templates/blog/content.html
@@ -1,20 +1,24 @@
-{% extends 'base.html'%}
-{% block title%}blog article{% endblock%}
-{% block content%}
+{% extends "base.html"%}
+
+{% block title%}文章列表{% endblock%}
+
+{%block content%}
+
 <div class="row text-center vertical-middle-sm">
-    <h1>{{blog.title}}</h1>
-</div>
-<div class= row">
-    <div class="col-xs-12 col-md-8">
-        <p class="text-center">
-            <span>{{blog.author.username}}</span>
-            <span class="margin-left:20px">{{publish}}</span>
-        </p>
-        <div>{{blog.body}}</div>
-    </div>
-
+    <h1>阅读，丰富头脑，善化行为</h1>
 </div>
 
-
+<div class="container">
+    {% for article in articles%}
+        <div class="list-group">
+            <a href="{{article.get_url_path}}" class="list-group-item active">
+                <h3 class="list-group-item-heading">{{article.title}}</h3>
+                <h4 class="list-group-item-text">{{article.auth.username}}</h4>
+                <p class="list-group-item-text">{{article.body|slice:'70'|linebreaks}}</p>
+            </a>
+        </div>
+    {% endfor %}
+    {% include 'paginator.html'%}
+</div>
 
 {% endblock%}
