--- a/myblog_02/templates/header.html
+++ b/myblog_02/templates/header.html
@@ -8,6 +8,7 @@
         </div>
         <div>
             <ul class="nav navbar-nav" role="navgation">
+                <li><a href="{% url 'index'%}">首页</a> </li>
                 <li><a href="{% url 'blog:blog_title' %}">BLOG</a></li>
                 <li><a href="{% url 'article:article_titles'%}">文章</a></li>
             </ul>
@@ -28,6 +29,7 @@
                 <li><a href="{% url 'account:user_logout'%}">退出</a></li>
                 {% else %}
                 <li><a href="{% url 'account:user_login'%}">登录</a> </li>
+                <li><a href="{% url 'account:user_register'%}">注册</a> </li>
                 {% endif %}
             </ul>
         </div>
