--- a/myblog_02/templates/article/leftsider.html
+++ b/myblog_02/templates/article/leftsider.html
@@ -5,5 +5,9 @@
         <p><a href="{% url 'article:article_list'%}">文章列表</a> </p>
         <p><a href="{% url 'article:article_tag'%}">文章标签</a></p>
     </div>
+    <hr>
+    <div class="text-center" style="margin-top: 5px">
+        <p><a href="{% url 'image:list_image'%}">图片管理</a></p>
+    </div>
 
 </div>
