--- a/myblog_02/templates/blog/titles.html
+++ b/myblog_02/templates/blog/titles.html
@@ -1,7 +1,7 @@
 {% extends "base.html"%}
 
 {% block title%}文章列表{% endblock%}
-
+{% load article_tags%}
 {%block content%}
 
 <div class="row text-center vertical-middle-sm">
@@ -14,7 +14,7 @@
             <a href="{{blog.get_url_path}}" class="list-group-item active">
                 <h3 class="list-group-item-heading">{{blog.title}}</h3>
                 <h4 class="list-group-item-text">{{blog.auth.username}}</h4>
-                <p class="list-group-item-text">{{blog.body|slice:'70'|linebreaks}}</p>
+                <p class="list-group-item-text">{{blog.body|markdown|slice:'70'|linebreaks}}</p>
             </a>
         </div>
     {% endfor %}
