--- a/myblog_02/templates/header.html
+++ b/myblog_02/templates/header.html
@@ -11,6 +11,7 @@
                 <li><a href="{% url 'index'%}">首页</a> </li>
                 <li><a href="{% url 'blog:blog_title' %}">BLOG</a></li>
                 <li><a href="{% url 'article:article_titles'%}">文章</a></li>
+                <li><a href="{% url 'image:falls_images'%}">图片</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 {% if user.is_authenticated %}
@@ -23,6 +24,7 @@
                             <li><a href="{% url 'account:password_change' %}">修改密码</a></li>
                             <li><a href="{% url 'account:my_information'%}">个人信息</a></li>
                             <li><a href="{% url 'article:article_column'%}">文章管理</a></li>
+                            <li><a href="{% url 'image:list_image'%}">图片管理</a> </li>
                         </ul>
                     </div>
                 </li>
