第七章，基于类的识图，增加课程学习

--- a/myblog_02/templates/header.html
+++ b/myblog_02/templates/header.html
@@ -12,6 +12,8 @@
                 <li><a href="{% url 'blog:blog_title' %}">BLOG</a></li>
                 <li><a href="{% url 'article:article_titles'%}">文章</a></li>
                 <li><a href="{% url 'image:falls_images'%}">图片</a></li>
+                <li><a href="{% url 'course:about'%}">关于本站</a> </li>
+                <li><a href="{% url 'course:course_list'%}">课程</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 {% if user.is_authenticated %}
@@ -25,6 +27,7 @@
                             <li><a href="{% url 'account:my_information'%}">个人信息</a></li>
                             <li><a href="{% url 'article:article_column'%}">文章管理</a></li>
                             <li><a href="{% url 'image:list_image'%}">图片管理</a> </li>
+                            <li><a href="{% url 'course:manage_course'%}">课程管理</a></li>
                         </ul>
                     </div>
                 </li>
