--- a/myblog_02/templates/article/leftsider.html
+++ b/myblog_02/templates/article/leftsider.html
@@ -7,7 +7,15 @@
     </div>
     <hr>
     <div class="text-center" style="margin-top: 5px">
+        <h4>图片管理</h4>
         <p><a href="{% url 'image:list_image'%}">图片管理</a></p>
     </div>
+    <hr>
+    <div class="text-center" style="margin-top: 5px">
+        <h4>课程管理</h4>
+        <p><a href="{% url 'course:manage_course'%}">课程管理</a></p>
+        <p><a href="{% url 'course:create_lesson'%}">内容发布</a> </p>
+    </div>
+
 
 </div>
